@@ -4,7 +4,7 @@
    XML description of printers known to libgimpprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.90 2003/11/28 02:25:32 rlk Exp $"
+   "$Id: printers.xml,v 1.91 2004/01/31 22:39:32 rlk Exp $"
 -->
 
 <gimp-print xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -695,6 +695,18 @@
       <printer name="EPSON Stylus Photo R300" driver="escp2-r300">
         <color value="true"/>
         <model value="63"/>
+        <gamma value="0.731"/>
+        <density value="1.0"/>
+      </printer>
+      <printer name="EPSON Stylus Photo RX500" driver="escp2-rx500">
+        <color value="true"/>
+        <model value="63"/>
+        <gamma value="0.731"/>
+        <density value="1.0"/>
+      </printer>
+      <printer name="EPSON Stylus Photo R800" driver="escp2-r800">
+        <color value="true"/>
+        <model value="64"/>
         <gamma value="0.731"/>
         <density value="1.0"/>
       </printer>
