@@ -778,6 +778,8 @@ EPSON Stylus Photo 2000P
 EPSON Stylus Photo 2100
 EPSON Stylus Photo 2200
 EPSON Stylus Photo R300   (Experimental)
+EPSON Stylus Photo RX500   (Experimental)
+EPSON Stylus Photo R800   (Experimental, CMYK only)
 EPSON Stylus Pro 5000
 EPSON Stylus Pro 5500
 EPSON Stylus Pro 7000
@@ -1097,6 +1099,8 @@ Epson Stylus Photo 2200        escp2-2200      EPSON Stylus Photo 2200
 Epson Stylus Photo EX          escp2-ex        EPSON Stylus Photo EX
 Epson Stylus Photo EX3         escp2-ex3       EPSON Stylus Photo EX3
 Epson Stylus Photo R300        escp2-r300      EPSON Stylus Photo R300
+Epson Stylus Photo RX500       escp2-rx500     EPSON Stylus Photo RX500
+Epson Stylus Photo R800        escp2-r800      EPSON Stylus Photo R800
 Epson Stylus Pro 5000          escp2-5000      EPSON Stylus Pro 5000
 Epson Stylus Pro 5500          escp2-5500      EPSON Stylus Pro 5500
 Epson Stylus Pro 7000          escp2-7000      EPSON Stylus Pro 7000
